--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
         body { font-family: 'Inter', sans-serif; }
         .hero-gradient { background: radial-gradient(circle at 50% 50%, #eff6ff 0%, #ffffff 100%); }
     </style>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>Channel Pilot | Professional YouTube Automation</title>
+    <meta name="title" content="Channel Pilot | Professional YouTube Automation">
+    <meta name="description" content="Launch your YouTube empire on autopilot. We handle niche research, scripts, voiceovers, and 4K editing.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourwebsite.com/">
+    <meta property="og:title" content="Channel Pilot | Professional YouTube Automation">
+    <meta property="og:description" content="Stop editing, start growing. Fully automated faceless channels starting today.">
+    <meta property="og:image" content="https://yourwebsite.com/assets/preview-image.png">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://yourwebsite.com/">
+    <meta property="twitter:title" content="Channel Pilot | Professional YouTube Automation">
+    <meta property="twitter:description" content="Stop editing, start growing. Fully automated faceless channels starting today.">
+    <meta property="twitter:image" content="https://yourwebsite.com/assets/preview-image.png">
 </head>
 <body class="bg-white text-slate-900">
 
