--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <meta name="description" content="Launch your YouTube empire on autopilot. We handle niche research, scripts, voiceovers, and 4K editing.">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourwebsite.com/">
+    <meta property="og:url" content="channel-pilot.vercel.app">
     <meta property="og:title" content="Channel Pilot | Professional YouTube Automation">
     <meta property="og:description" content="Stop editing, start growing. Fully automated faceless channels starting today.">
-    <meta property="og:image" content="https://yourwebsite.com/assets/preview-image.png">
+    <meta property="og:image" content="channel-pilot.vercel.app/assets/preview-image.png">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yourwebsite.com/">
+    <meta property="twitter:url" content="channel-pilot.vercel.app">
     <meta property="twitter:title" content="Channel Pilot | Professional YouTube Automation">
     <meta property="twitter:description" content="Stop editing, start growing. Fully automated faceless channels starting today.">
-    <meta property="twitter:image" content="https://yourwebsite.com/assets/preview-image.png">
+    <meta property="twitter:image" content="channel-pilot.vercel.app/assets/preview-image.png">
 </head>
 <body class="bg-white text-slate-900">
 
